# RLVRs

./: .env.example  pyproject.toml
examples/: grpo_gsm8k.py
rlvrs/: schema.py  trainer_registry.py
rlvrs/algs/: base.py  grpo.py  utils.py
rlvrs/rollout/: __init__.py  base.py  huggingface.py  vllm.py
rlvrs/verifiers/: base.py  exact_math.py  gsm8k_verifier.py
